# VTubers-Live

api/: Cargo.toml
api/src/: main.rs
client/: .gitignore  package.json
client/src/: App.svelte
