[package]
name = "vtubers-live-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
rocket = "0.5.0-rc.2"
rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc"] }
serde = "1.0.142"
